# PoE2-Reliquary

./: .gitignore  AtlasMapContextPlan.md  AtziriTemplePlan.md  LICENSE  LINUX_PORT.md  MARKETPLACE_RESEARCH.md  MapUpdaterPlan.md  MotionOverhaulPlan.md  ProjectPlan.md  ProjectPlan2.md  README.md  RELEASE_NOTES.md  Refinement.md  SESSION_NOTES.txt  TESTING.md  TestPlan.md  index.html  package-lock.json  package.json
.github/workflows/: update-market-feed.yml
.handoff/: pipeline.json  run.ps1  status.md
.handoff/stages/: 01-git-fetch.ps1  02-git-checkout.ps1  03-git-pull.ps1  04-apply-priority.ps1  05-fix-atlas-ui.ps1  06-npm-ci.ps1  07-npm-build.ps1  08-cargo-fmt.ps1  09-cargo-check.ps1
NordicRunicExperimental/: README.md  RunicIdentityImplementationPlan.md  launch-current-exe.ps1  launch-runic-app-dev.ps1  launch-runic-app-release.ps1
NordicRunicExperimental/app/: MotionOverhaulPlan.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
NordicRunicExperimental/app/src-tauri/: Cargo.toml  tauri.conf.json
NordicRunicExperimental/app/src-tauri/capabilities/: default.json
NordicRunicExperimental/app/src-tauri/src/: build_profile.rs  exchange.rs  lib.rs  main.rs  map_context.rs  map_ocr.rs  price_check.rs  trade_search.rs
NordicRunicExperimental/mockups/: README.md  runic-presentation.css  (+2 more)
docs/: MarketFeedArchitecture.md
scripts/: collect-market-history.mjs  enrich-guide.mjs  generate-rune-assets.mjs  market-history-policy.mjs  market-history-policy.test.mjs  scrape-guide.mjs
site/: app.js  index.html  styles.css
src/: app-settings.ts  atlas-line-mode.test.ts  atlas-line-mode.ts  atlas-run-history.ts  campaign-guide.json  evaluate.test.ts  evaluate.ts  exchange-watchlist.test.ts  exchange-watchlist.ts  main.ts  market-board.test.ts  market-board.ts  market-feed-normalize.test.ts  market-feed.test.ts  market-feed.ts  motion-runtime.test.ts  motion-runtime.ts  runic-line-mode.test.ts  runic-theme.css  styles.css  temple-engine.test.ts  temple-engine.ts
src-tauri/: Cargo.toml  banned_mods.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: build_profile.rs  debug_log.rs  discord_presence.rs  exchange.rs  hazards.rs  item_parser.rs  lib.rs  macros.rs  main.rs  map_context.rs  map_ocr.rs  price_check.rs  source_truth.rs  trade_search.rs  whispers.rs
(+47 files in other folders)
