[package]
name = "kalandra-lumen-scan"
version = "0.1.0"
description = "A lightweight Path of Exile 2 overlay built with Rust and Tauri."
authors = ["Kalandra Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "kalandra_lumen_scan"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
linemux = "0.3"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
