[package]
name = "reliquary"
version = "0.1.3"
description = "A lightweight Path of Exile 2 overlay built with Rust and Tauri."
authors = ["Reliquary Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "reliquary_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
fuzzy-matcher = "0.3"
flate2 = "1"
linemux = "0.3"
once_cell = "1"
rdev = "0.5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
urlencoding = "2"
webbrowser = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
