[package]
name = "reliquary-runic-experiment"
version = "0.0.1"
description = "Isolated Nordic/runic Reliquary desktop experiment."
authors = ["Reliquary Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "reliquary_runic_experiment_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
